templates/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations: {}
  labels:
    app: spring-db-demo
    app.kubernetes.io/component: spring-db-demo
    app.kubernetes.io/instance: spring-db-demo
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: spring-db-demo-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8-el7
  name: spring-db-demo
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    app: spring-db-demo
    deploymentconfig: spring-db-demo
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: spring-db-demo
        deploymentconfig: spring-db-demo
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: test
          image: ' '
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          name: spring-db-demo
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - spring-db-demo
        from:
          kind: ImageStreamTag
          name: spring-db-demo:latest
      type: ImageChange
    - type: ConfigChange
