templates/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    template: mysql-ephemeral-template
  name: mysql
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    name: mysql
  sessionAffinity: None
  type: ClusterIP
